--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "conda activate dw & next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
